--- a/libs/record-list/dialog-add-record/src/lib/dialog-add-record/dialog-add-record.component.html
+++ b/libs/record-list/dialog-add-record/src/lib/dialog-add-record/dialog-add-record.component.html
@@ -30,12 +30,12 @@
     <mat-form-field>
       <mat-label>Phone</mat-label>
       <capital-input-phone
-        placeholder="Phone"
-        formControlName="phone"
+        placeholder="Phone-alt"
+        formControlName="phone-alt"
         required
       ></capital-input-phone>
-      <mat-error *ngIf="form.controls.phone.invalid">{{
-        getErrorMessage(form.controls.phone, 'phone')
+      <mat-error *ngIf="form.controls.phoneAlt.invalid">{{
+        getErrorMessage(form.controls.phoneAlt, 'phone-alt')
       }}</mat-error>
     </mat-form-field>
     <mat-form-field>
