Update to Nx 17; Update to Angular 17

--- a/libs/shared/footer/src/lib/footer/footer.component.html
+++ b/libs/shared/footer/src/lib/footer/footer.component.html
@@ -22,7 +22,7 @@
         </li>
         <li>
           <a href="mailto:mailto@server.com"
-            ><mat-icon>mail</mat-icon>mailto@server.com</a
+            ><mat-icon>mail</mat-icon>mailto&#64;server.com</a
           >
         </li>
       </ul>
